# SSIM

./: .gitignore  Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2  traces.3
src/: Bitmap.cpp  Bitmap.hpp  Decoder.cpp  Decoder.hpp  Frame.cpp  Frame.hpp  Main.cpp  Makefile  Makefile.am  Makefile.in  RawFrame.cpp  RawFrame.hpp  VideoFile.cpp  VideoFile.hpp  libav.hpp  ssim  ssim.c
src/.deps/: ssim-Bitmap.Po  ssim-Decoder.Po  ssim-Frame.Po  ssim-Main.Po  ssim-RawFrame.Po  ssim-VideoFile.Po  ssim-ssim.Po
tools/: visualize.py
